[gd_scene load_steps=12 format=2]

[ext_resource path="res://Sprites/camel.png" type="Texture" id=1]
[ext_resource path="res://Camel.gd" type="Script" id=2]

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 1 )
region = Rect2( 256, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 1 )
region = Rect2( 320, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 64, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 128, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 192, 0, 64, 64 )

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ SubResource( 8 ), SubResource( 9 ) ],
"loop": false,
"name": "Bounce",
"speed": 2.0
}, {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ) ],
"loop": true,
"name": "Walk",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 18, 10.5 )

[sub_resource type="CircleShape2D" id=7]
radius = 17.0

[node name="Camel" type="KinematicBody2D"]
collision_layer = 2
script = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 5 )
animation = "Walk"
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 3, 19 )
shape = SubResource( 6 )

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 5, 12 )
shape = SubResource( 7 )

[node name="RaycastNode" type="Node2D" parent="."]
position = Vector2( 1, 5 )

[node name="RayCast2D" type="RayCast2D" parent="RaycastNode"]
position = Vector2( -21, 1 )
enabled = true
cast_to = Vector2( 0, 34 )

[node name="VisibilityEnabler2D" type="VisibilityEnabler2D" parent="."]
process_parent = true
physics_process_parent = true

[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
